# nextage_fillie

./: README.md
catkin_ws/devel/: local_setup.sh
catkin_ws/devel/lib/pkgconfig/: nextage_fillie_open_description.pc
catkin_ws/src/LISA/: receive_image.py
catkin_ws/src/camera_calib/scripts/: cont_disparity.py  down_sample.py  gif.py  pointCloud.ply  send_image.py  stereovision.py  stereovision_calibration.py  test.py  test_point.py  video.py
catkin_ws/src/doc/html/en/: .buildinfo  (+12 more)
catkin_ws/src/hii/: CMakeLists.txt  package.xml
catkin_ws/src/nextage_fillie_open_description/: KRC_Robot_Model_LICENSE
catkin_ws/src/nextage_fillie_open_description/models/: main_custom.wrl
catkin_ws/src/nextage_fillie_open_gazebo/: CHANGELOG.rst  CMakeLists.txt
catkin_ws/src/nextage_fillie_open_gazebo/config/: nextage_fillie_open_gazebo_control.yaml
catkin_ws/src/nextage_fillie_open_gazebo/launch/: gz_viz.launch  nextage_fillie_open_gazebo_control.launch  rviz.launch
catkin_ws/src/nextage_fillie_open_gazebo/test/: test_nextage_fillie_open_gz.py
catkin_ws/src/nextage_fillie_open_moveit_config/: Moveit_NextageFillieOpen.desktop.in
catkin_ws/src/nextage_fillie_open_moveit_config/launch/: default_warehouse_db.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  warehouse.launch
catkin_ws/src/nextage_fillie_open_moveit_config/test/: nextage_fillie_open_moveit.test
catkin_ws/src/nextage_fillie_open_ros_bridge/conf/: nextage_fillie_open.conf  nextage_fillie_open_nosim.xml
catkin_ws/src/nextage_fillie_open_ros_bridge/launch/: ar_headcamera.launch  hands_ueye.launch  hironx_ros_bridge_real.launch  nextage_fillie_open_ros_bridge_simulation.launch  nextage_fillie_open_startup.launch
catkin_ws/src/nextage_fillie_open_ros_bridge/script/: circle.py  demo.py  demo_27th_May.py  general_support.py  head_controller.py  nextage_fillie_open.py  nxoros_test.sh  sef_goinit.py  test_avg.py  torso_controller.py  video.py
catkin_ws/src/nextage_fillie_open_ros_bridge/test/: nextage_fillie_open.test  test_airhand.py  test_hironx_derivedmethods_rostest.py
catkin_ws/src/rtmros_nextage_fillie_open/: CHANGELOG.rst  package.xml
catkin_ws/src/send_pc/: seg_rgb.npy  segmented_pc.npy
catkin_ws_0/devel/lib/pkgconfig/: nextage_fillie_open_ros_bridge.pc
catkin_ws_0/src/LISA/: chat.py
catkin_ws_0/src/camera_calib/scripts/: send_image.py  stereo_calib_new.py  visualize.py
catkin_ws_0/src/hii/src/: bridge_ros_python3.py
catkin_ws_0/src/nextage_fillie_open_description/urdf/: nextage_fillie_open_gz.xacro
catkin_ws_0/src/nextage_fillie_open_gazebo/: package.xml
catkin_ws_0/src/nextage_fillie_open_gazebo/test/: gz.test
catkin_ws_0/src/nextage_fillie_open_moveit_config/config/: FillieOpen.srdf
catkin_ws_0/src/nextage_fillie_open_moveit_config/launch/: demo.launch  nextage_fillie_open_demo.launch
catkin_ws_0/src/nextage_fillie_open_moveit_config/test/: joy.test
catkin_ws_0/src/nextage_fillie_open_ros_bridge/: package.xml
catkin_ws_0/src/nextage_fillie_open_ros_bridge/launch/: nextage_fillie_open_ros_bridge_real.launch  nextage_fillie_open_ueye_stereo.launch  rviz.launch
catkin_ws_1/devel/: .catkin
catkin_ws_1/devel/lib/pkgconfig/: hii.pc
catkin_ws_1/src/camera_calib/scripts/: basic_disparity.py  pointCloud.py
catkin_ws_1/src/nextage_fillie_open_moveit_config/: .setup_assistant
catkin_ws_1/src/nextage_fillie_open_moveit_config/launch/: FillieOpen_moveit_controller_manager.launch  move_group.launch  planning_context.launch  setup_assistant.launch
catkin_ws_2/src/nextage_fillie_open_description/: CMakeLists.txt
catkin_ws_2/src/nextage_fillie_open_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws_2/src/nextage_fillie_open_ros_bridge/: CHANGELOG.rst  CMakeLists.txt
(+128 files in other folders)
