<?xml version="1.0"?>
<package>
  <name>rtmros_nextage_fillie_open</name>
  <version>1.0.0</version>
  <description>The rtmros_nextage_fillie_open package is a ROS interface for <a href = "http://www.kawadarobot.co.jp/en/nextage/">Nextage Fillie</a> dual-armed robot from Kawada Robotics Corporation
  </description>
  <maintainer email="opensource@kawadarobot.co.jp">KRC</maintainer>
  <author>Kei Okada</author>
  <author>Isaac Isao Saito</author>
  <author email="w.yasuda@opensource-robotics.tokyo.jp">Wataru Yasuda</author>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/rtmros_nextage</url>
  <url type="bugtracker">https://github.com/tork-a/rtmros_nextage/issues</url>
  <url type="repository">https://github.com/tork-a/rtmros_nextage</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>nextage_fillie_open_description</run_depend>
  <!-- <run_depend>nextage_fillie_open_gazebo</run_depend> -->
  <run_depend>nextage_fillie_open_moveit_config</run_depend>
  <run_depend>nextage_fillie_open_ros_bridge</run_depend>
  <!-- <run_depend>rtmros-hironx</run_depend> -->
  <!-- <run_depend>rtmros-nextage</run_depend> -->
  <export>
    <metapackage/>
  </export>
</package>
