<?xml version="1.0"?>
<package>
  <name>nextage_fillie_open_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation for NEXTAGE Fillie Open</description>

  <maintainer email="opensource@kawadarobot.co.jp">KRC</maintainer>
  <license>BSD</license>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>
  <!-- <url type="website">http://wiki.ros.org/nextage_fillie_open_gazebo</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>nextage_fillie_open_description</run_depend>
  <run_depend>nextage_fillie_open_moveit_config</run_depend>
  <run_depend>ros_controllers</run_depend>
  <test_depend>rostest</test_depend>
  <export>
  </export>
</package>
